2001-02-26  Phil Edwards  <pme@sources.redhat.com>

	Fixes libstdc++/2079
	* include/backward/iomanip.h:  Expose <ios> manipulators to global
	  namespace.
	* include/backward/iostream.h:  Also expose std::ws.

2001-02-25  Greg Freemyer <freemyer@NorcrossGroup.com>

	* libmath/mathconf.h (GET_LDOUBLE_MSW64): Fix thinko.

2001-02-23  Alexandre Oliva <aoliva@redhat.com>

        * mknumeric_limits (CC): Use VAR=${VAR=...} form.

2001-02-23  David Edelsohn <dje@watson.ibm.com>

	* mknumeric_limits (CC): Use $BUILD_DIR/../../gcc/xgcc

2001-02-23  Phil Edwards  <pme@sources.redhat.com>

        c++/2052
        * include/backward/iostream.h:  Expose std::flush in old headers.

2001-02-23  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

        * mknumeric_limits: Remove special-casing on target.  Use
        gcc instead of g++ to build gen-num-limits.cc
	
2001-02-19  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* include/bits/basic_file.h: Add #pragma system_header
	* include/bits/basic_ios.h: Ditto.
	* include/bits/basic_string.h: Ditto.
	* include/bits/char_traits.h: Ditto.
	* include/bits/codecvt.h: Ditto.
	* include/bits/cpp_type_traits.h:  Ditto.
	* include/bits/fpos.h: Ditto.
	* include/bits/gslice.h: Ditto.
	* include/bits/gslice_array.h: Ditto.
	* include/bits/indirect_array.h: Ditto.
	* include/bits/ios_base.h: Ditto.
	* include/bits/limits_generic.h: Ditto.
	* include/bits/locale_facets.h: Ditto.
	* include/bits/localefwd.h: Ditto.
	* include/bits/mask_array.h: Ditto.
	* include/bits/sbuf_iter.h: Ditto.
	* include/bits/sequence_concepts.h: Ditto.
	* include/bits/slice.h: Ditto.
	* include/bits/slice_array.h: Ditto.
	* include/bits/std_algorithm.h: Likewise.
	* include/bits/std_bitset.h: Likewise.
	* include/bits/std_complex.h: Likewise.
	* include/bits/std_deque.h: Likewise.
	* include/bits/std_fstream.h: Likewise.
	* include/bits/std_functional.h: Likewise.
	* include/bits/std_iomanip.h: Likewise.
	* include/bits/std_ios.h: Likewise.