@@ -37,13 +37,13 @@
 #pragma GCC system_header
 
 #include <exception>
-#include <bits/stringfwd.h>
+#include <string>
 
 namespace std 
 {
   class logic_error : public exception 
   {
-    const string& _M_msg;
+    const string _M_msg;
 
   public:
     explicit 
@@ -82,7 +82,7 @@ namespace std
 
   class runtime_error : public exception 
   {
-    const string& _M_msg;
+    const string _M_msg;
 
   public:
     explicit 
